--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-gesture-handler": "~2.2.1",
     "expo-font": "~10.1.0",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "expo-linear-gradient": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
